# vespa-search

./: ARCHITECTURE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  feed.py  main.py  schemas.py
app/static/: style.css
app/templates/: index.html
data/: products.json
tests/: test_query_utils.py
vespa-app/: hosts.xml  services.xml
vespa-app/schemas/: product.sd
