[project]
name = "vespa-search"
version = "0.1.0"
description = "Local Vespa search setup for e-commerce products with FastAPI and metrics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn==0.34.0",
  "httpx==0.28.1",
  "jinja2==3.1.5",
  "python-multipart==0.0.20",
  "prometheus-client==0.22.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "RUF"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

